--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -11,8 +11,8 @@ jobs:
     needs: [wait]
     type: maestro
     env:
-      MAESTRO_PROJECT_ID: 53171ba4-60ca-40cb-b3e6-b0c2393677b8
-      MAESTRO_GROUP_ID: 4eae1320-1f13-418b-9da2-cc1464dceee2
+      PROJECT_ID: ${{ env.PROJECT_ID }}
+      GROUP_ID: ${{ env.GROUP_ID }}
     params:
       build_id: ${{ needs.wait.outputs.build_id }}
       flow_path: ['.maestro/ios/landing.yml']
