--- a/apps/betterangels/.eas/workflows/android-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/android-e2e-test.yml
@@ -10,6 +10,9 @@ jobs:
   maestro_test:
     needs: [wait]
     type: maestro
+    env:
+      MAESTRO_PROJECT_ID: ${{ env.MAESTRO_PROJECT_ID }}
+      MAESTRO_GROUP_ID: ${{ env.MAESTRO_GROUP_ID }}
     params:
       build_id: ${{ needs.wait.outputs.build_id }}
       flow_path: ['.maestro/android/landing.yml']
