--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -52,12 +52,6 @@ outputs:
   ios-runtime-version:
     description: 'Runtime version for iOS update.'
     value: ${{ steps.perform-eas-update.outputs.ios-runtime-version }}
-  ios-group-id:
-    description: 'Update Group ID for iOS '
-    value: ${{ steps.perform-eas-update.outputs.ios-group-id }}
-  android-group-id:
-    description: 'Update Group ID for iOS '
-    value: ${{ steps.perform-eas-update.outputs.android-group-id }}
 
 runs:
   using: 'composite'
@@ -96,3 +90,12 @@ runs:
           echo "${platform}-group-id=$group_id" >> $GITHUB_OUTPUT
         done
       shell: bash
+
+    - name: Set Group ID
+      id: set-group-id
+      run: |
+        group_id=$(echo '${{ steps.perform-eas-update.outputs.ios-group }}' | jq -r '.hash')
+        echo "GROUP_ID=$group_id" >> .env
+        echo "group-id=$group_id" >> $GITHUB_OUTPUT
+      shell: bash
+      working-directory: apps/${{ inputs.project }}
