--- a/.github/actions/expo-build/action.yml
+++ b/.github/actions/expo-build/action.yml
@@ -174,8 +174,7 @@ runs:
     - name: Set Project ID
       id: set-project-id
       run: |
-        project_id=$(echo '${{ steps.check-builds.outputs.project-id }}' | jq -r '.hash')
+        project_id="${{ steps.check-builds.outputs.project-id }}"
         echo "PROJECT_ID=$project_id" >> .env
-        echo "project-id=$project_id" >> $GITHUB_OUTPUT
       shell: bash
       working-directory: apps/${{ inputs.project }}
