fix set group id

--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -94,7 +94,7 @@ runs:
     - name: Set Group ID
       id: set-group-id
       run: |
-        group_id="${{ steps.check-builds.outputs.group-id }}"
+        group_id="${{ steps.perform-eas-update.outputs.group-id }}"
         echo "MAESTRO_GROUP_ID=$group_id" >> .env
         echo "group-id=$group_id" >> $GITHUB_OUTPUT
       shell: bash
