--- a/apps/betterangels/.eas/workflows/android-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/android-e2e-test.yml
@@ -2,7 +2,7 @@ name: e2e-test-android
 
 jobs:
   extract-vars:
-    type: generic
+    type: build
     steps:
       - id: extract
         run: |
