--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -5,40 +5,31 @@ jobs:
     steps:
       - id: extract
         run: |
-          echo "/home/expo/workingdir/"
-          ls -al /home/expo/workingdir/
-          echo "/home/expo/workingdir/temporary-custom-build"
-          ls -al /home/expo/workingdir/temporary-custom-build
-          cat /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env
-        # run: |
-        #   pwd
-        #   ls -al
-  #         echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' .env | cut -d '=' -f2-)" >> $EAS_ENV
-  #         echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' .env | cut -d '=' -f2-)" >> $EAS_ENV
-  #         echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' .env | cut -d '=' -f2-)" >> $EAS_ENV
+          echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
+          echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
+          echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
 
-  #         echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' .env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
-  #         echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' .env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
-  #         echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' .env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
-  #       working-directory: apps/betterangels
-  #   outputs:
-  #     MAESTRO_GROUP_ID: ${{ steps.extract.outputs.MAESTRO_GROUP_ID }}
-  #     MAESTRO_PROJECT_ID: ${{ steps.extract.outputs.MAESTRO_PROJECT_ID }}
-  #     RUNTIME_VERSION: ${{ steps.extract.outputs.RUNTIME_VERSION }}
+          echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
+          echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
+          echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
+    outputs:
+      MAESTRO_GROUP_ID: ${{ steps.extract.outputs.MAESTRO_GROUP_ID }}
+      MAESTRO_PROJECT_ID: ${{ steps.extract.outputs.MAESTRO_PROJECT_ID }}
+      RUNTIME_VERSION: ${{ steps.extract.outputs.RUNTIME_VERSION }}
 
-  # wait:
-  #   needs: [extract-vars]
-  #   type: get-build
-  #   params:
-  #     runtime_version: ${{ needs.extract-vars.outputs.RUNTIME_VERSION }}
-  #     platform: ios
+  wait:
+    needs: [extract-vars]
+    type: get-build
+    params:
+      runtime_version: ${{ needs.extract-vars.outputs.RUNTIME_VERSION }}
+      platform: ios
 
-  # maestro_test:
-  #   needs: [wait, extract-vars]
-  #   type: maestro
-  #   env:
-  #     MAESTRO_GROUP_ID: ${{ needs.extract-vars.outputs.MAESTRO_GROUP_ID }}
-  #     MAESTRO_PROJECT_ID: ${{ needs.extract-vars.outputs.MAESTRO_PROJECT_ID }}
-  #   params:
-  #     build_id: ${{ needs.wait.outputs.build_id }}
-  #     flow_path: ['.maestro/ios/landing.yml']
+  maestro_test:
+    needs: [wait, extract-vars]
+    type: maestro
+    env:
+      MAESTRO_GROUP_ID: ${{ needs.extract-vars.outputs.MAESTRO_GROUP_ID }}
+      MAESTRO_PROJECT_ID: ${{ needs.extract-vars.outputs.MAESTRO_PROJECT_ID }}
+    params:
+      build_id: ${{ needs.wait.outputs.build_id }}
+      flow_path: ['.maestro/ios/landing.yml']
