--- a/apps/betterangels/.eas/workflows/ios-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/ios-e2e-test.yml
@@ -5,13 +5,13 @@ jobs:
     steps:
       - id: extract
         run: |
-          echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
-          echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
-          echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
+          echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
+          echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
+          echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $EAS_ENV
 
-          echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
-          echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
-          echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' ../temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
+          echo "MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
+          echo "MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
+          echo "RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)" >> $GITHUB_OUTPUT
     outputs:
       MAESTRO_GROUP_ID: ${{ steps.extract.outputs.MAESTRO_GROUP_ID }}
       MAESTRO_PROJECT_ID: ${{ steps.extract.outputs.MAESTRO_PROJECT_ID }}
