--- a/apps/betterangels/.eas/workflows/android-e2e-test.yml
+++ b/apps/betterangels/.eas/workflows/android-e2e-test.yml
@@ -5,31 +5,31 @@ jobs:
     steps:
       - id: extract
         run: |
-          MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)
           MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)
-          RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)
+          echo $MAESTRO_PROJECT_ID
+          MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' /home/expo/workingdir/temporary-custom-build/apps/betterangels/.env | cut -d '=' -f2-)
+          echo $MAESTRO_GROUP_ID
+    # outputs:
+    # echo "MAESTRO_GROUP_ID=$MAESTRO_GROUP_ID" >> $EAS_ENV
+    # echo "MAESTRO_PROJECT_ID=$MAESTRO_PROJECT_ID" >> $EAS_ENV
+    # echo "RUNTIME_VERSION=$RUNTIME_VERSION" >> $EAS_ENV
+    #   MAESTRO_GROUP_ID: ${{ steps.extract.outputs.MAESTRO_GROUP_ID }}
+    #   MAESTRO_PROJECT_ID: ${{ steps.extract.outputs.MAESTRO_PROJECT_ID }}
+    #   RUNTIME_VERSION: ${{ steps.extract.outputs.RUNTIME_VERSION }}
 
-          echo "MAESTRO_GROUP_ID=$MAESTRO_GROUP_ID" >> $EAS_ENV
-          echo "MAESTRO_PROJECT_ID=$MAESTRO_PROJECT_ID" >> $EAS_ENV
-          echo "RUNTIME_VERSION=$RUNTIME_VERSION" >> $EAS_ENV
-    outputs:
-      MAESTRO_GROUP_ID: ${{ steps.extract.outputs.MAESTRO_GROUP_ID }}
-      MAESTRO_PROJECT_ID: ${{ steps.extract.outputs.MAESTRO_PROJECT_ID }}
-      RUNTIME_VERSION: ${{ steps.extract.outputs.RUNTIME_VERSION }}
+  # wait:
+  #   needs: [extract-vars]
+  #   type: get-build
+  #   params:
+  #     runtime_version: ${{ needs.extract-vars.outputs.RUNTIME_VERSION }}
+  #     platform: android
 
-  wait:
-    needs: [extract-vars]
-    type: get-build
-    params:
-      runtime_version: ${{ needs.extract-vars.outputs.RUNTIME_VERSION }}
-      platform: android
-
-  maestro_test:
-    needs: [wait, extract-vars]
-    type: maestro
-    env:
-      MAESTRO_GROUP_ID: ${{ needs.extract-vars.outputs.MAESTRO_GROUP_ID }}
-      MAESTRO_PROJECT_ID: ${{ needs.extract-vars.outputs.MAESTRO_PROJECT_ID }}
-    params:
-      build_id: ${{ needs.wait.outputs.build_id }}
-      flow_path: ['.maestro/android/landing.yml']
+  # maestro_test:
+  #   needs: [wait, extract-vars]
+  #   type: maestro
+  #   env:
+  #     MAESTRO_GROUP_ID: ${{ needs.extract-vars.outputs.MAESTRO_GROUP_ID }}
+  #     MAESTRO_PROJECT_ID: ${{ needs.extract-vars.outputs.MAESTRO_PROJECT_ID }}
+  #   params:
+  #     build_id: ${{ needs.wait.outputs.build_id }}
+  #     flow_path: ['.maestro/android/landing.yml']
