--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -75,7 +75,6 @@ runs:
           branch=$(echo "$update_info" | jq -r '.branch')
           update_id=$(echo "$update_info" | jq -r '.id')
           group_id=$(echo "$update_info" | jq -r '.group')
-          echo $group_id
           update_commit=$(echo "$update_info" | jq -r '.gitCommitHash')
           runtime_version=$(echo "$update_info" | jq -r '.runtimeVersion')
           update_permalink="https://expo.dev/projects/${{ inputs.project-id }}/updates/${update_id}"
@@ -92,5 +91,7 @@ runs:
 
           echo $group_id
           echo "MAESTRO_GROUP_ID=$group_id" >> .env
+          mgi=$(grep '^MAESTRO_GROUP_ID=' .env | cut -d '=' -f2-)
+          echo $mgi
         done
       shell: bash
