--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -89,9 +89,8 @@ runs:
           echo "${platform}-runtime-version=$runtime_version" >> $GITHUB_OUTPUT
           echo "${platform}-group-id=$group_id" >> $GITHUB_OUTPUT
 
-          echo $group_id
           echo "MAESTRO_GROUP_ID=$group_id" >> .env
           mgi=$(grep '^MAESTRO_GROUP_ID=' .env | cut -d '=' -f2-)
-          echo $mgi
+          echo mgi $mgi
         done
       shell: bash
