--- a/.github/actions/check-env/action.yml
+++ b/.github/actions/check-env/action.yml
@@ -16,11 +16,7 @@ runs:
         echo ls
         ls -al
 
-        MAESTRO_GROUP_ID=$(grep '^MAESTRO_GROUP_ID=' .env | cut -d '=' -f2-)
-        echo MAESTRO_GROUP_ID $MAESTRO_GROUP_ID
-        MAESTRO_PROJECT_ID=$(grep '^MAESTRO_PROJECT_ID=' .env | cut -d '=' -f2-)
-        echo MAESTRO_PROJECT_ID $MAESTRO_PROJECT_ID
-        RUNTIME_VERSION=$(grep '^RUNTIME_VERSION=' .env | cut -d '=' -f2-)
-        echo RUNTIME_VERSION $RUNTIME_VERSION
+        cat .env_2
+
       shell: bash
       working-directory: apps/${{ inputs.project }}
