--- a/.github/actions/expo-build/action.yml
+++ b/.github/actions/expo-build/action.yml
@@ -176,5 +176,6 @@ runs:
       run: |
         project_id="${{ steps.check-builds.outputs.project-id }}"
         echo "MAESTRO_PROJECT_ID=$project_id" >> .env
+        echo "MAESTRO_PROJECT_ID=$project_id" >> .env_2
       shell: bash
       working-directory: apps/${{ inputs.project }}
