move set project-id to update

--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -94,6 +94,15 @@ runs:
         done
       shell: bash
 
+    - name: Set Project ID
+      id: set-project-id
+      run: |
+        project_id="${{ inputs.project-id }}"
+        echo "MAESTRO_PROJECT_ID=$project_id" >> .env
+        echo "MAESTRO_PROJECT_ID=$project_id" >> .env_2
+      shell: bash
+      working-directory: apps/${{ inputs.project }}
+
     - name: Set Group ID
       id: set-group-id
       run: |
