--- a/.github/actions/expo-build/action.yml
+++ b/.github/actions/expo-build/action.yml
@@ -171,11 +171,11 @@ runs:
         echo "slug=${unique_slugs[0]}" >> $GITHUB_OUTPUT
         echo "project-id=${unique_project_ids[0]}" >> $GITHUB_OUTPUT
 
-    - name: Set Project ID
-      id: set-project-id
-      run: |
-        project_id="${{ steps.check-builds.outputs.project-id }}"
-        echo "MAESTRO_PROJECT_ID=$project_id" >> .env
-        echo "MAESTRO_PROJECT_ID=$project_id" >> .env_2
-      shell: bash
-      working-directory: apps/${{ inputs.project }}
+    # - name: Set Project ID
+    #   id: set-project-id
+    #   run: |
+    #     project_id="${{ steps.check-builds.outputs.project-id }}"
+    #     echo "MAESTRO_PROJECT_ID=$project_id" >> .env
+    #     echo "MAESTRO_PROJECT_ID=$project_id" >> .env_2
+    #   shell: bash
+    #   working-directory: apps/${{ inputs.project }}
