fix working dir

--- a/.github/actions/expo-update/action.yml
+++ b/.github/actions/expo-update/action.yml
@@ -111,4 +111,4 @@ runs:
         echo "MAESTRO_GROUP_ID=$group_id" >> .env
         echo "MAESTRO_GROUP_ID=$group_id" >> .env_2
       shell: bash
-      working-directory: apps/${{ inputs.group }}
+      working-directory: apps/${{ inputs.project }}
