--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -150,13 +150,13 @@ jobs:
       - name: 🧪 Run Android E2E Tests
         working-directory: apps/${{ matrix.project }}
         run: |
-          npx eas-cli workflow:run .eas/workflows/android-e2e-test.yml \
+          eas workflow:run .eas/workflows/android-e2e-test.yml \
             --non-interactive \
 
       - name: 🧪 Run iOS E2E Tests
         working-directory: apps/${{ matrix.project }}
         run: |
-          npx eas-cli workflow:run .eas/workflows/ios-e2e-test.yml \
+          eas workflow:run .eas/workflows/ios-e2e-test.yml \
             --non-interactive \
 
       - name: 📝 Comment on PR
