--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -147,17 +147,10 @@ jobs:
           slug: ${{ steps.preview-build.outputs.slug }}
           project-id: ${{ steps.preview-build.outputs.project-id }}
 
-      - name: 🧪 Run Android E2E Tests
+      - name: 🧪 Run E2E Tests
         working-directory: apps/${{ matrix.project }}
         run: |
-          eas workflow:run .eas/workflows/android-e2e-test.yml \
-            --non-interactive \
-
-      - name: 🧪 Run iOS E2E Tests
-        working-directory: apps/${{ matrix.project }}
-        run: |
-          eas workflow:run .eas/workflows/ios-e2e-test.yml \
-            --non-interactive \
+          eas workflow:run .eas/workflows/e2e-test.yml --non-interactive
 
       - name: 📝 Comment on PR
         if: github.event_name == 'pull_request'
